# geodiff

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish_docs.yaml  release_publish.yaml
docs/: cst.ipynb  geodiff.md  hicks_henne.ipynb  myst.yml  neural_ode.ipynb  nice.ipynb  nig_net.ipynb  real_nvp.ipynb
docs/assets/: references.bib  utils.py
src/geodiff/: aux_nets.py  cst.py  hicks_henne.py  neural_ode.py  nice.py  nig_net.py  real_nvp.py  transforms.py
test/: test_cst.py  test_hicks_henne.py  test_latent_code.py  test_latent_code_neural_ode.py  test_neural_ode.py  test_neural_ode_with_preaux_net.py  test_nice.py  test_nig_net.py  test_real_nvp.py  test_sampling.py  utils.py
