[project]
name = "geodiff"
version = "0.1.0"
description = "Differentiable geometry representations for shape parameterization and optimization."
readme = "README.md"
authors = [
    { name = "Atharva Aalok", email = "atharvaaalok@gmail.com" }
]
requires-python = ">=3.12.0"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
